# custom-k8s-scheduler

./: README.md  pyproject.toml
src/pod_scheduler/: __init__.py  config.py  main.py
tests/: pod_scheduling_test.py
tests/data/: example_job.yaml  example_pod.yaml
